--- a/src/style/style.css
+++ b/src/style/style.css
@@ -3,7 +3,6 @@
   --secondary-color: #DDD7C5;
   --contrast-color: #438088;
   --background-color: #373B41;
-
   --header-background-color: #1a1d20;
 }
 * {
@@ -11,4 +10,21 @@
   font-weight: 300;
   margin: 0 0;
   padding: 0 0;
+  background-color: var(--background-color);
+  color: var(--primary-color);
+}
+.header {
+  background-color: var(--header-background-color);
+  color: var(--secondary-color);
+  font-weight: 600;
+  font-size: 24px;
+  padding: 25px 100px;
+}
+.aside {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--contrast-color);
+}
+.aside > div {
+
 }
