--- a/src/style/style.css
+++ b/src/style/style.css
@@ -49,8 +49,21 @@ img {
 }
 
 /* content sections */
+.sec1 {
+  display: flex;
+  flex-direction: row;
+  margin: 50px;
+}
+.sec1-text {
+  margin-right: 50px;
+  flex: 1;
+}
+.sec1-text p {
+  font-size: 24px;
+}
 .sec1-img {
-  height: 350px;
-  width: 650px;
+  flex: 1;
+  margin: 25px 100px;
+  height: 450px;
   background-color: var(--header-background-color);
 }
