--- a/src/style/style.css
+++ b/src/style/style.css
@@ -49,20 +49,23 @@ img {
 }
 
 /* content sections */
-.sec1, .sec2 {
+.sec1, .sec2, .sec3 {
   display: flex;
   flex-direction: row;
   margin: 50px;
   margin-bottom: 200px;
 }
-.sec1-text, .sec2-text {
+.sec1-text, .sec2-text, .sec3-text {
   margin-right: 50px;
   flex: 1;
 }
-.sec1-text p, .sec2-text p{
+.sec1-text p, .sec2-text p, .sec3-text p{
   font-size: 24px;
 }
-.sec1-img, .sec2-img {
+.sec3-text {
+  text-align: center;
+}
+.sec1-img, .sec2-img{
   flex: 1;
   margin: 25px 100px 25px 0px;
   height: 450px;
